# python-phabricator

./: .coverage  .coveragerc  .gitignore  .travis.yml  CHANGES  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: CI.yml
phabricator/: __init__.py  __version__.py  _compat.py  gen_api_interfaces.php  interfaces.json  interfaces.py  structures.py  tests.py
phabricator/tests/: test_phabricator.py
tests/: test_integration.py  test_phabricator.py
