[tool.poetry]
name = "phabricator"
version = "0.8.1"
description = "Phabricator API Bindings"
authors = ["Disqus <opensource@disqus.com>"]
classifiers=[
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'Operating System :: OS Independent',
    'Topic :: Software Development',
    'Programming Language :: Python',
    'Programming Language :: Python :: 2',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mock = "^4.0.3"
responses = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
